--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,23 +1,22 @@
-name: deploy-frontend
+name: Deploy Frontend to Docker Hub
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - master
 
 jobs:
-  deploy-frontend:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: echo 'Construyendo imagen Frontend...'
-      - run: docker build -t ${{ secrets.DOCKER_USER }}/frontend-restapi:${{ github.sha }} .
-      - run: docker images
+      - name: Clonar el repo
+        uses: actions/checkout@v3
 
-      - name: docker login
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - name: Iniciar sesión en DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
 
-      - name: docker push
-        run: docker push ${{ secrets.DOCKER_USER }}/frontend-restapi:${{ github.sha }}
+      - name: Construir imagen
+        run: docker build -t ${{ secrets.DOCKER_USER }}/artworks-pg-frontend .
+
+      - name: Subir imagen
+        run: docker push ${{ secrets.DOCKER_USER }}/artworks-pg-frontend
